--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>牛邦 Web 组件库 - 索引页</title>
   <link rel="stylesheet" type="text/css" href="./build/nb-component.css">
-  <script src="/build/nb-component.js"></script>
+  <script src="./build/nb-component.js"></script>
 </head>
 
 <body>
